Addressed review comments.